# pipek-fitpose

./: .env.dev.sample  .env.sample  .gitignore copy  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test.py
pipek/: default_settings.py
pipek/cmd/: controller.py  web.py  worker.py
pipek/controller/: __init__.py  server.py
pipek/dashapp/: __init__.py  acl.py  managers.py  redis_caches.py
pipek/dashapp/callbacks/: __init__.py  file_upload.py  utils.py
pipek/dashapp/pages/: clock.py  image_dashboard.py
pipek/jobs/: __init__.py  face_detections.py  hello_rq.py
pipek/models/: __init__.py  images.py
pipek/utils/: config.py
pipek/web/: __init__.py  acl.py  oauth2.py
pipek/web/static/: package-lock.json  package.json
pipek/web/templates/: index.html
pipek/web/views/: __init__.py  rq_test.py  sites copy.py  sites.py
pipek/worker/: __init__.py  server.py
scripts/: run-controller  run-web  run-worker
